--- a/labo2/src/main/resources/application.properties
+++ b/labo2/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.username=jaime
 spring.datasource.password=asd123
 server.port=8082
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.SQL=OFF
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=OFF
 spring.jpa.hibernate.ddl-auto=update
